Implemented authentication- Login, logout, password reset

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@ Home
 
 {% block content %}
 {% load static %}
+{% include 'homenavbar.html' %}
 <div class="container container-fluid text-center p-4">
     <h1>E-W<span><img src="{% static 'images/e-world.png' %}" alt="e-com logo" width="30" height="30"></span>rld E-Commerce</h1>
 </div>
