--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,8 @@
 <div>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}">E-W<span><img src="{% static 'images/e-world.png' %}" alt="e-com logo" width="15" height="15"></span>rld E-Commerce</a>
+            <a class="navbar-brand" href="{% url 'home' %}">E-W<span><img src="{% static 'images/e-world.png' %}"
+                        alt="e-com logo" width="15" height="15"></span>rld E-Commerce</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -47,6 +48,20 @@
                             <li><a class="dropdown-item" href="#">Update</a></li>
                             <li><a class="dropdown-item" href="#">Delete</a></li>
                         </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="">
+                <ul class="nav justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">{% if request.user.is_authenticated %}
+                            Welcome {{ request.user.username }}
+                            {% endif %}</a>
+                    </li>
+                    <li class="nav-item">
+                        <form action="logout">
+                            <input class="nav-link" type="submit" value="Logout">
+                        </form>
                     </li>
                 </ul>
             </div>
