--- a/templates/registration/ResetPassword.html
+++ b/templates/registration/ResetPassword.html
@@ -1,12 +1,44 @@
-<form method="post">
-    {% csrf_token %}
-    <label for="username">User name</label>
-    <input type="text" name="username">
-    <label for="password">New Password</label>
-    <input type="password" name="password1" id="">
-    <label for="confirmpassword">Confirm Password</label>
-    <input type="password" name="password2" id="">
-    <input type="submit" value="Change Password">
+{% extends 'base.html' %}
 
-</form>
-{{ msg }}
+{% block title %}
+Sign in
+{% endblock %}
+
+{% block content %}
+{% load static %}
+
+<main class="form-signin w-75 m-auto">
+    <form method="post">
+        {% csrf_token %}
+        <img class="mx-auto d-block" src="{% static 'images/e-world.png' %}" alt="" width="72" height="72">
+        <h1 class="h3 mb-3 fw-normal text-center">E-W<span><img src="{% static 'images/e-world.png' %}" alt="e-com logo"
+                    width="15" height="15"></span>rld</h1>
+        <h3 class="h5 mb-3 fw-normal text-center">Reset Password</h3>
+        <div class="form-floating">
+            <input type="text" class="form-control" id="floatingInput" placeholder="Username" name="username">
+            <label for="floatingInput">User Name</label>
+        </div>
+
+        <div class="form-floating">
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password1">
+            <label for="floatingPassword">Password</label>
+        </div>
+        <div class="form-floating">
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password2">
+            <label for="floatingPassword">Confirm Password</label>
+        </div>
+        <button class="btn btn-primary w-100 py-2" type="submit">Reset</button>
+    </form>
+
+    <p class="text-md text-success text-center">{{ msg }}</p>
+
+    <p class="mt-5 mb-3 text-md text-success text-center mr-3">Already registerd? | <a
+            href="{% url 'login' %}">Login</a></p>
+    <p class="text-md text-success text-center">Forgot Password? | <a href="{% url 'reset' %}">Reset Password</a></p>
+    <p class="mt-5 mb-3 text-body-secondary text-center">&copy; 2024</p>
+</main>
+
+
+
+
+{% endblock %}
